<resources>
    <string name="app_name">HygroSense</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_statistics">Statistics</string>
    <string name="remote_name">ESP32 with DHT22 Sensor</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>

    <string name="action_settings">Settings</string>
    <string name="connecting">Connecting (AP)</string>
    <string name="connecting_aws">Connecting (AWS)</string>
    <string name="ip_address_of_the_esp32">IP of the measurement system</string>
    <string name="aws_endpoint_address">AWS IoT Endpoint</string>
    <string name="ip_address_of_the_esp32_access_point">IP of the measurement system (Access Point)</string>

    <string name="wifi_ssid_name">WiFi SSID (name)</string>
    <string name="wifi_ssid_access_point_name">WiFi Access Point SSID (name)</string>
    <string name="wifi_password">WiFi password</string>
    <string name="wifi_password_access_point">WiFi Access Point Password</string>

    <string name="action_info">info</string>
    <string name="action_bluetooth">bluetooth</string>
    <string name="access_point_mode">AP Mode Selected,\n you will now try to connect to the ESP32 device</string>
    <string name="aws_mode_station_mode">AWS Station Mode Selected</string>
    <string name="connection_type">Select a connection type</string>
    <string name="aws_unreachable">AWS unreachable, check settings</string>
    <string name="send_settings_to_esp32">Send settings to the ESP32</string>
    <string name="wrong_aws_certificates">Wrong AWS certificates provided</string>
    <string name="all_sensors">All sensors</string>
    <string name="average">Average</string>

    <string name="action_statistics">Statistics</string>
    <string name="average_data">Average data</string>
    <string name="records">records</string>
    <string name="no_records">(0 records)</string>
    <string name="action_delete">Delete</string>
    <string name="temperature_chart">Temperature - Time chart</string>
    <string name="humidity_chart">Humidity - Time chart</string>
    <string name="temperature_min_max">Temp. min/max</string>
    <string name="humidity_min_max">Hum. min/max</string>
    <string name="empty">-</string>
    <string name="deleted_all_statistics">Deleted all statistics</string>

    <string name="action_calibrate">Calibrate</string>
    <string name="test_calibration_camera">Test ML Kit on a ref. sens. (Camera)</string>
    <string name="test_calibration_gallery">Test ML Kit on a ref. sens. (Gallery)</string>
    <string name="calibrate_based_on_reference_sensor_values">Calibrate with reference sensor</string>
    <string name="auto_calibrate">Auto calibration (ref. sens. screen in front of device)</string>
    <string name="stop_calibration">Stop calibration/measurements with ref. sens.</string>
</resources>