<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.HygroSense.AppBarOverlay">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/Theme.HygroSense">

            <TextView
                android:id="@+id/titleToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/remoteNameTextView"
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/remote_name"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/temperatureTextView"
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/remoteNameTextView"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/temperature"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/temperatureValueTextView"
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temperatureTextView"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/temperature"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/humidityTextView"
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temperatureValueTextView"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/humidity"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/humidityValueTextView"
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/humidityTextView"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/humidity"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/stopAllAndSetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/humidityValueTextView"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:onClick="getHumidity"
            android:text="button text" />

        <Button
            android:id="@+id/stopAllAndSetName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/stopAllAndSetName"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:onClick="getDataFromSensor"
            android:text="button text2" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>