<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarTheme"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/Theme.HygroSense">

        <TextView
            android:id="@+id/titleToolbar"
            style="@style/ToolbarTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:text="@string/activity_settings"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        style="@style/AppBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        tools:context=".SettingsActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="40dp">

            <LinearLayout
                android:id="@+id/LinearLayout00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ipAddressText"
                    style="@style/TextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/ip_address_of_the_esp32"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/ipAddressEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/roundedtextview"
                    android:enabled="false"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:text=""
                    android:textColor="@android:color/white"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/wifiSsidText"
                    style="@style/TextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/wifi_ssid_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/wifiSsidEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/roundedtextview"
                    android:enabled="false"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:text=""
                    android:textColor="@android:color/white"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/wifiPasswordText"
                    style="@style/TextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/wifi_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/wifiPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/roundedtextview"
                    android:enabled="false"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:text=""
                    android:textColor="@android:color/white"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/sendSettingsToEsp32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:onClick="sendSettingsToEsp32"
                    android:text="send settings to esp32" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>